[gd_scene load_steps=4 format=3]

[ext_resource type="Script" uid="uid://bv6mpu5b4pled" path="res://root/scenes/game_scene/achievement_master/ui/pinned/pinned_achievement_item.gd" id="pinned_achievement_item_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item_bg"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.12, 0.12, 0.16, 0.75)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.3, 0.75, 0.35, 1)

[node name="PinnedAchievementItem" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_item_bg")
script = ExtResource("pinned_achievement_item_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "実績名"
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
max_value = 1.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "0/1"
